--- a/public/index.css
+++ b/public/index.css
@@ -21,6 +21,35 @@ ul {
 
 /* div classes */
 
-.user-list {
 
+
+/* delete button */
+
+.delete-button {
+	border:1px solid transparent;
+	background-color: transparent;
+	vertical-align: middle;
+  outline: 0;
+  cursor: pointer;
+}
+
+.delete-button:after {
+	content: "X";
+	display: block;
+	width: 15px;
+	height: 15px;
+	background-color: #FA9595;
+	z-index:1;
+	right: 35px;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	padding: 2px;
+	border-radius: 50%;
+	text-align: center;
+	color: white;
+	font-weight: normal;
+	font-size: 12px;
+	box-shadow: 0 0 2px #E50F0F;
+	cursor: pointer;
 }
