--- a/public/index.css
+++ b/public/index.css
@@ -10,18 +10,29 @@ h1 {
   text-align: center;
 }
 
-div {
+/*div {
   border-style: solid;
   border-color: rgb(156, 234, 255);
-}
+}*/
 
 ul {
   list-style-type: none;
 }
 
-/* div classes */
+/* div/span classes */
 
+.user-happiness {
+  margin-left: 20px;
+}
 
+.user-name {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.task-name {
+  margin-left: 20px;
+}
 
 /* delete button */
 
